<resources>
    <string name="app_name">Wordle</string>
    <string name="user_word_hint">Enter 4 letter guess here</string>
    <string name="guess">Guess!</string>
    <string name="guess_1">Guess #1</string>
    <string name="guess_1_check">Guess #1 Check</string>
    <string name="guess_2">Guess #2</string>
    <string name="guess_2_check">Guess #2 Check</string>
    <string name="guess_3">Guess #3</string>
    <string name="guess_3_check">Guess #3 Check</string>
    <string name="reset">Reset</string>
    <string name="options">Options</string>


    <array name="options">
        <item>Any 4 letter word</item>
        <item>Words with A</item>
        <item>Words with B</item>
        <item>Words with C</item>
    </array>
</resources>
