<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_host"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <nl.dionsegijn.konfetti.xml.KonfettiView
            android:id="@+id/konfetti"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/guess_one_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/guess_1"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guess_one_label"
            tools:text="XXXX"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_one_check_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/guess_1_check"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_one"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_one_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_one"
            tools:text="XXXX"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_two_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/guess_2"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_one_check"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_one_check"
            tools:text="XXXX"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_two_check_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/guess_2_check"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_two"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_two_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_two"
            tools:text="XXXX"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_three_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/guess_3"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_two_check"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_two_check"
            tools:text="XXXX"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_three_check_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/guess_3_check"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_three"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/guess_three_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/default_font_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guess_three"
            tools:text="XXXX"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/word_to_guess_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:textSize="@dimen/biggest_font_size"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/user_input_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="XYZ"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/user_input_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:hint="@string/user_word_hint"
            android:inputType="textCapCharacters"
            android:lines="1"
            android:maxLength="4"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guess_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/guess_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/guess"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>